--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "tachyons": "^4.12.0",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "web3": "^1.3.4"
   },
   "scripts": {
     "predeploy": "npm run build",
