--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://Payngolinky.github.io/shop",
   "dependencies": {
+    "@metamask/onboarding": "^1.0.0",
     "@pangolindex/sdk": "^1.1.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
